# yolo_ros

./: .gitignore
yolo_ros/yolo_ros/: yolo_node.py
yolo_ros_tensorrt/: CMakeLists.txt  package.xml
yolo_ros_tensorrt/include/yolo_ros_tensorrt/: common.hpp  yolo.hpp  yolov7.hpp  yolov8.hpp
yolo_ros_tensorrt/src/: yolo_tensorrt_node.cpp
